--- a/react/src/assets/scss/components/_productCard.scss
+++ b/react/src/assets/scss/components/_productCard.scss
@@ -12,6 +12,7 @@
         }
     }
 
+    // picture and hover
     .card-background {
         max-width: 40vw;              
         position: relative;
@@ -77,6 +78,7 @@
         }
     }
 
+    // product information
     .product-info {
         .category {
             font-size: $font-size-13;
