--- a/react/src/assets/scss/core/_utilities.scss
+++ b/react/src/assets/scss/core/_utilities.scss
@@ -1,3 +1,4 @@
+// general designs throughout whole website
 .html, body {
     padding: 0;
     margin: 0;
@@ -88,6 +89,7 @@ a{
         color: $color-theme;
     }
 }
+
 
 ul {
     list-style: none;
