--- a/react/src/assets/scss/homeview/_companyInformation.scss
+++ b/react/src/assets/scss/homeview/_companyInformation.scss
@@ -6,6 +6,7 @@
         display: flex;
     }
 
+    // individual info box
     .group-info{
         text-align: center;
         padding: 0.5rem;
