--- a/react/src/assets/scss/homeview/_featuredShowcase.scss
+++ b/react/src/assets/scss/homeview/_featuredShowcase.scss
@@ -9,6 +9,7 @@
     @include lg {
     }
 
+    // left box
     .pamela-reif {
         position: relative;
         max-width: 100vw;
@@ -35,6 +36,7 @@
         }
     }
 
+    // right box
     .lets-be-conscious {
         position: relative;
         max-width: 100vw;
