--- a/react/src/assets/scss/homeview/_saleShowcase.scss
+++ b/react/src/assets/scss/homeview/_saleShowcase.scss
@@ -1,15 +1,18 @@
+// 70% off
 .sale {
     position: relative;
     height: fit-content;
     margin-top: 2rem;
     margin-bottom: 3rem;
 
+    // background
     img {
         height: 100%;
         width: 100%;
         object-fit: contain;
     }
 
+    // info
     .info {
         position: absolute;
         top: 50%;
