--- a/react/src/assets/scss/homeview/_shoppingInfo.scss
+++ b/react/src/assets/scss/homeview/_shoppingInfo.scss
@@ -7,6 +7,7 @@
         padding: 1rem;
     }
 
+    // big box
     .flexed-box {
         gap: 0.5rem;
         justify-content: center;
@@ -18,6 +19,7 @@
             margin-top: 1.5rem;
         }
 
+        // small info box
         .info-box {
             flex:1;
             display: flex;
@@ -42,9 +44,10 @@
 
                 }
 
-                a {
+                .get-started {
                     font-size: $font-size-13;
                     text-decoration: underline;
+                    color: $color-dark;
                     margin-bottom: 0;
                     position: absolute;
                     bottom:1rem;
@@ -57,9 +60,14 @@
                         position:static;
                         
                     }
+
+                    &:hover {
+                        color: $color-theme;
+                    }
                 }
             }
 
+            // image
             img {
                 flex: 1;
                 display: none;
