picture grid init

--- a/react/src/assets/scss/App.scss
+++ b/react/src/assets/scss/App.scss
@@ -18,6 +18,9 @@
 @import "./homeview/companyInformation";
 
 // CONTACT
-@import "./contactview/bredcrumb";
+@import "./contactview/breadcrumb";
 @import "./contactview/map";
 @import "./contactview/contactForm";
+
+// PRODUCT SPECIFICATION
+@import "./productspecification/productImgGrid";
