cart context done

--- a/react/src/assets/scss/App.scss
+++ b/react/src/assets/scss/App.scss
@@ -8,6 +8,7 @@
 @import "./components/productCard";
 @import "./components/navigationbar";
 @import "./components/footer.scss";
+@import "./components/shoppingCart";
 
 // HOMEVIEW
 @import "./homeview/showcase.scss";
