--- a/react/src/assets/scss/homeview/_shoppingInfo.scss
+++ b/react/src/assets/scss/homeview/_shoppingInfo.scss
@@ -79,7 +79,7 @@
                     object-fit: contain;           
                 }
 
-                @include lg {
+                @include xl {
                     max-width: 100%;
                     max-height: 100%;
                     object-fit: contain;
