product detail done!

--- a/react/src/assets/scss/App.scss
+++ b/react/src/assets/scss/App.scss
@@ -27,3 +27,4 @@
 // PRODUCT SPECIFICATION
 @import "./productspecification/productDetails";
 @import "./productspecification/productInformation";
+@import "./productspecification/relatedProducts";
