--- a/react/src/assets/scss/productspecification/_productDetails.scss
+++ b/react/src/assets/scss/productspecification/_productDetails.scss
@@ -158,7 +158,7 @@
                 height: 2rem;
 
                 .label {
-                    width: 7rem;
+                    min-width: 7rem;
                     text-align: left;
                 } 
 
