--- a/react/src/assets/scss/components/_navigationbar.scss
+++ b/react/src/assets/scss/components/_navigationbar.scss
@@ -25,39 +25,56 @@
         width: 100%;
     }
 
-    .navigation-menu {
-        grid-column: 2;
-        grid-row: 2;
-        justify-self: right;
-        text-align: center;
-        display: flex;
-        flex-direction: column;
-        list-style-type: none;
-        padding:0;
-        margin-top: auto;
-        margin-bottom: 0.3rem;
-        width: fit-content;
+    // Navigation menu and drop down on small devices
+    .dropdown-navigation-menu{
+        position: fixed;
+        top:2.5rem;
+        left:0;
+        right:1rem;
+        padding:1rem;
+        display: none;
+        width: 100%;
+        background-color: transparent;
 
         @include lg {
-            flex-direction: row;
-            justify-content: space-between;
-            background-color:  rgba(255, 255, 255, 0);;
+            display:inline;
+            position: initial;
+            backdrop-filter: none;
         }
-
-        .navigation-menu-item {
-            margin-right: 1rem;
-            display: inline;
-
-            @include md {
-                display:initial;
-            }
-
+        .navigation-menu {
+            grid-column: 2;
+            grid-row: 2;
+            justify-self: right;
+            text-align: center;
+            display: flex;
+            flex-direction: column;
+            list-style-type: none;
+            padding:0;
+            margin-top: auto;
+            margin-bottom: 0.3rem;
+            width: fit-content;
+    
             @include lg {
-                &:last-child{
-                    margin-right: 0rem;
-                }
+                flex-direction: row;
+                justify-content: space-between;
+                background-color:  rgba(255, 255, 255, 0);;
             }
-        }   
+    
+            .navigation-menu-item {
+                margin-right: 1rem;
+                display: inline;
+    
+                @include md {
+                    display:initial;
+                }
+    
+                @include lg {
+                    &:last-child{
+                        margin-right: 0rem;
+                    }
+                }
+            }   
+        }
     }
 
     // my account and search
@@ -90,8 +107,7 @@
     }
 }
 
-// Navigation menu and drop down on small devices
-.dropdown-navigation-menu{
+.dropdown-navigation-menu-background{
     position: fixed;
     top:2.5rem;
     left:0;
@@ -100,13 +116,6 @@
     display: none;
     width: 100%;
     background-color: transparent;
-
-    @include lg {
-        display:inline;
-        position: initial;
-        backdrop-filter: none;
-        background-color: transparent;
-    }
 }
 
 .background-container{
@@ -126,6 +135,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        display:none;
     }
 
     .background-div{
@@ -140,7 +150,10 @@
 
         z-index: 10;
 
-        @include md {
+        @include lg {
+            height: 0.1rem;
+            width: 0.1rem;
+            display:none;
         }
     }
 }
