--- a/react/src/assets/scss/homeview/_shoppingInfo.scss
+++ b/react/src/assets/scss/homeview/_shoppingInfo.scss
@@ -10,7 +10,7 @@
     // big box
     .flexed-box {
         gap: 0.5rem;
-        justify-content: center;
+        justify-content: space-between;
         align-items: stretch;
         display: flex;
 
@@ -75,13 +75,13 @@
                 @include md {
                     display: inline;   
                     max-width: 50%;
-                    max-height: 100%;
+                    max-height: 90%;
                     object-fit: contain;           
                 }
 
                 @include xl {
-                    max-width: 100%;
-                    max-height: 100%;
+                    max-width: 90%;
+                    max-height: 90%;
                     object-fit: contain;
                     margin: auto;
                     margin:0;
